--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,15 +6,19 @@
 
 #Header{
   min-height: 95px;
-
+  max-height: 100px;
   h6,span{
     font-size: 12px;
   }
   h6{
-    font-family: $font-futura;
+    font-family: $font-primary;
+    //font-weight: bold;
   }
 }
 
+a.btn{
+  font-weight: bold;
+}
 .user-control{
   position: relative;
   top: 12px;
@@ -62,7 +66,7 @@ span{
   }
 
   p{
-    color: $dgl-darkblue;
+    color: $dgl-gray;
   }
   table,th, td {
     border: 1px solid $dgl-orange;
@@ -133,7 +137,7 @@ span.light{
 
 .background-past-tournament{
   background-image: url('/storage/lc.png');
-  //background-color: #f9f9f9;
+  background-color: #fff;
   background-size: contain;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -188,36 +192,6 @@ span.light{
   font-weight: normal;
 }
 
-.card-widget{
-  min-width: 225px;
-  max-width: 250px;
-}
-.card { //set a back color
-  //max-width: 225px;
-  .card-body{
-    color: #FFF;
-
-    table{
-      th, td{
-        padding:0;
-      }
-    }
-    p{
-      font-size: .9em;
-    }
-  }
-  .card-link {
-    color: #FFF;
-    font-weight: 700;
-  }
-  .card-text{
-    color: #FFF !important;
-  }
-  .card-title{
-    font-family: $font-futura;
-  }
-}
-
 .font-primary{
   font-family: $font-primary;
   font-weight: normal;
@@ -239,6 +213,9 @@ span.light{
 .thumbnail {
   position: relative;
   overflow: hidden;
+  //display: block;
+  margin-left: 0px;
+  margin-right: 0px;
 
   img {
     position: absolute;
@@ -252,31 +229,17 @@ span.light{
   }
 }
 
-.thumbnail-x {
-  position: relative;
-  overflow: hidden;
-
-  img {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 100%;
-    height: auto;
-    -webkit-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-  }
-}
-.thumbnail-sq {
-  width: 12vw;
-  height: 12vw;
-  min-width: 100px;
-  min-height: 100px;
+.thumbnail-new {
+  width: 40%;
+  height: 15em;
+  //min-width: 100px;
+  //min-height: 100px;
 }
 
-.thumbnail-rect-lg {
-  width: 100vw;
-  height: 24vw;
+
+.thumbnail-rect {
+  width: 100%;
+  height: 15vw;
   min-width: 100px;
   min-height: 24px;
 }
@@ -289,8 +252,8 @@ span.light{
 }
 
 .thumbnail-rect {
-  width: 20vw;
-  height: 15vw;
+  //width: 100%;
+  //height: 15vw;
 
   max-width: 300px;
   max-height: 225px;
@@ -305,28 +268,45 @@ span.light{
 
 .carousel-item
 {
+  .banner-div{
+    display: block;
+    height: 80vh;
+    background-position: center;
+    overflow: hidden;
+    background-size: cover;
+  }
   .banner-layer{
     position: absolute;
     top: 0;
     left: 0;
     z-index: 3;
     //box-shadow:         inset 0px 0px 150px 4px #000000;
-
+    background: linear-gradient(0deg, $dgl-purple5 , transparent);
     //background: linear-gradient(315deg, $dgl-purple, $dgl-purple, rgba(20,8,5,0.6), rgba(20,8,5,0.75));
-    background: radial-gradient(circle farthest-side at 65% 10%,  transparentize($dgl-turquiose,.25) 0%, transparentize($dgl-blue,.25) 70%);
+    //background: radial-gradient(circle farthest-side at 65% 10%,  transparentize($dgl-turquiose,.25) 0%, transparentize($dgl-blue,.25) 70%);
     //background: radial-gradient(closest-side at 60% 55%, blue, green, yellow, black);
   }
   .slide-text{
     color: $dgl-blue;
+    font-family: $font-primary;
+    text-transform: none;
+    font-weight: normal;
+    //font-weight: normal !important;
   }
 }
 
 .carousel-caption{
-  text-align: start;
+  //text-align: start;
+  //position: relative;
+  //bottom: 45vh;
+  margin-bottom: 20vh;
+  h1{
+    font-weight: bolder;
+  }
 }
 .carousel-text-header{
-  font-size: 3.5em;
-  text-align: start;
+  font-size: 3em;
+  //text-align: start;
 }
 
 .carousel-control-prev, .carousel-control-next{
@@ -348,12 +328,13 @@ span.light{
 
 }
 
+.widget-title{
+
+}
 // Componenets
 body{
 
-  //font-size: 15px;
   font-family: $font-copy;
-  line-height: 1.618;
   background-color: $dgl-purple4;
   .tag{
     font-family: $font-primary;
@@ -775,13 +756,24 @@ body{
       }
     }
     .nav-item{
-      margin-left: 10px;
-      margin-right: 10px;
+      padding-left: 1vw !important;
+      padding-right: 1vw !important;
       padding-bottom: .5rem;
       padding-top: .5rem;
+      border-top : 5px solid transparent;
+      border-bottom : 5px solid transparent;
+
       &:hover{
-        background-color: $dgl-darktuquise;
+        background-color: $dgl-purple4;
+        border-top : 5px solid $dgl-red;
       }
+    }
+
+    .nav-item.lined{
+      border-left: 1px solid $dgl-purple;
+    }
+    .nav-item.lined.last{
+      border-right: 1px solid $dgl-purple;
     }
 
   }
@@ -797,6 +789,8 @@ body{
     //height: 400px;
     color : $dgl-gray;
     a{
+      font-size: 12px;
+      font-weight: bold;
       margin: auto 5px auto 10px;
       color: #FFF;
       text-transform: uppercase;
@@ -814,8 +808,9 @@ body{
       //padding-top: 15px;
       img{
         position: relative;
-        //bottom: 20px;
-        margin-top: 15px;
+        //bottom: 50px;
+        //box-shadow: 10px 10px black;
+        margin-top: 5px;
         //margin-bottom: 5px;
       }
     }
@@ -837,6 +832,7 @@ body{
 
   }
   .navbar-dgl{
+    border-bottom: 1px solid $dgl-purple;
     background-color: $dgl-purple3 !important;
     color: $dgl-gray;
     position: fixed;
@@ -856,7 +852,7 @@ body{
     }
     .navbar-text{
       font-family: $font-primary;
-      font-size: 1.2em;
+      //font-size: 1.2em;
     }
 
     a{
@@ -873,9 +869,9 @@ body{
       //padding-bottom: 10px;
     }
     a.nav-link{
-      font-family: FuturaMedium, $font-copy;
-      border-bottom: 5px solid transparent;
-      font-size: .8em;
+      font-family: $font-primary, $font-copy;
+      $font-weight: bold;
+      font-size: .7em;
       //&:hover{
       //  color: lighten($dgl-orange, 10%);
       //}
@@ -952,71 +948,89 @@ body{
   .banner-background{
     background-color: $dgl-darkergray;
   }
-
+  .card-body{
+    .table{
+      thead{
+        border: 0px !important;
+      }
+    }
+  }
+  .card-body.card-title{
+    ///border-bottom-left-radius: 3px;
+    border-top-left-radius: 3px;
+    border-left: 5px solid $dgl-red;
+    background-color: $dgl-purple2;
+  }
   .dgl-card-img{
     width: 50%;
     display: block;
     margin: 2em auto 0 auto;
+
+  }
+  .dgl-card-img-small{
+    width: 25%;
+    display: block;
+    margin: 2em auto 0 auto;
+
   }
 
-  .main{
-    background-color: #FFF;
-  }
-
-  .main-slot{
-
+  .main-content{
+    .section-title{
+      padding: 5px;
+      border-left: 5px solid $dgl-red;
+      //border-right: 1px solid $dgl-purple;
+      //border-top: 1px solid $dgl-purple;
+      //border-bottom: 1px solid $dgl-purple;
+      border-radius: 2px;
+    }
   }
   .post-body{
-    padding-bottom: 1em;
+    background-color: $dgl-purple3 !important;
+    border: 1px solid $dgl-purple;
+
     .time{
-      color: $dgl-purple;
+      color: $dgl-darktuquise;
+      //font-weight: bolder;
     }
     background-color: transparent;
     .post-link {
       text-decoration: none;
       .post-title {
-
-        color: $dgl-darkblue;
+        //font-family: $font-futura;
+        font-weight: normal;
+        color: #FFF;
         text-decoration: none;
         margin-top : 5px;
       }
     }
-    //span{
-    //  h1,h2,h3,h4,h5,h6{
-    //    //color: lighten($dgl-lightestgray,25%);
-    //    color: $dgl-orange;
-    //  }
-    //}
+    .post-text{
+      //flex-grow: 2;
+      width: 55%;
+      margin-left: 3%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: start;
+    align-content: center;
+
+
   }
 
   .post-body-hover{
+    cursor: pointer;
     &:hover{
-      //box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      //background-color: $dgl-purple;
-      //border: 1px solid $dgl-purple;
-      cursor: pointer;
-      //border: 1px solid $dgl-purple;
-      span{
-        p//, h1,h2,h3,h4,h5,h6{
-        {
-          //color: lighten($dgl-lightestgray,25%);
-          //color: $dgl-almostwhite;
-        }
-      }
-
-      .time{
-        color: $dgl-blue;
-      }
-
       .post-title{
-        //color: #FFF;
+        color: $dgl-red;
       }
     }
   }
 
   //Footer
   .footer {
-    background-color: $dgl-darkestgray;
+    background-color: transparentize($dgl-purple4, .7);
     padding-top: 2em;
     font-family: $font-primary;
     h5{
