--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,6 +4,10 @@
 @import "variables";
 // Generic
 
+.generic-section-title{
+  border-left: 5px solid $dgl-red;
+  border-radius: 2px;
+}
 #Header{
   min-height: 95px;
   max-height: 100px;
@@ -123,25 +127,25 @@ span.light{
   background-size: cover;
 }
 
-.background-active-tournament{
-  background-image: url('/storage/hearthstone2.jpg');
-  background-size: cover;
-  background-position: top;
-}
-
-.background-upcoming-tournament{
-  background-image: url('/storage/hanzogenji.png');
-  background-size: cover;
-  background-position: top;
-}
-
-.background-past-tournament{
-  background-image: url('/storage/lc.png');
-  background-color: #fff;
-  background-size: contain;
-  background-position: bottom;
-  background-repeat: no-repeat;
-}
+//.background-active-tournament{
+//  background-image: url('/storage/hearthstone2.jpg');
+//  background-size: cover;
+//  background-position: top;
+//}
+//
+//.background-upcoming-tournament{
+//  //background-image: url('/storage/hanzogenji.png');
+//  background-size: cover;
+//  background-position: top;
+//}
+//
+//.background-past-tournament{
+//  //background-image: url('/storage/lc.png');
+//  background-color: #fff;
+//  background-size: contain;
+//  background-position: bottom;
+//  background-repeat: no-repeat;
+//}
 .jumbotron-atournament{
   background-size: cover !important;
   background-position: center !important;
