CSS changes + using new overwatch api.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -370,7 +370,7 @@ span h3,
 span h4,
 span h5,
 span h6 {
-  color: #e9793a;
+  color: #EE2C54;
   font-weight: bold;
   text-transform: none !important;
 }
@@ -405,7 +405,7 @@ span.light h3,
 span.light h4,
 span.light h5,
 span.light h6 {
-  color: #ff7324;
+  color: #EE2C54;
 }
 
 .main-banner {
